@@ -157,15 +157,16 @@
 #define ERR_GROUP_OBJECT_STATUS                  156
 #define ERR_COMPLIANCE_GROUP_STATUS              157
 #define ERR_COMPLIANCE_OBJECT_STATUS             158
-#define ERR_SEQUENCE_ORDER                       159
-#define ERR_SEQUENCE_NO_COLUMN                   160
-#define ERR_SEQUENCE_MISSING_COLUMN              161
-#define ERR_ILLEGAL_ROWSTATUS_DEFAULT            162
-#define ERR_ILLEGAL_STORAGETYPE_DEFAULT          163
-#define ERR_DEFVAL_OUT_OF_BASETYPE               164
-#define ERR_DEFVAL_OUT_OF_RANGE                  165
-#define ERR_DEFVAL_OUT_OF_ENUM                   166
-#define ERR_TADDRESS_WITHOUT_TDOMAIN             167
-#define ERR_INETADDRESS_WITHOUT_TYPE             168
-#define ERR_INETADDRESSTYPE_SUBTYPED             169
-#define ERR_INETADDRESS_SPECIFIC                 170
+#define ERR_GROUP_OPTIONAL                       159
+#define ERR_SEQUENCE_ORDER                       160
+#define ERR_SEQUENCE_NO_COLUMN                   161
+#define ERR_SEQUENCE_MISSING_COLUMN              162
+#define ERR_ILLEGAL_ROWSTATUS_DEFAULT            163
+#define ERR_ILLEGAL_STORAGETYPE_DEFAULT          164
+#define ERR_DEFVAL_OUT_OF_BASETYPE               165
+#define ERR_DEFVAL_OUT_OF_RANGE                  166
+#define ERR_DEFVAL_OUT_OF_ENUM                   167
+#define ERR_TADDRESS_WITHOUT_TDOMAIN             168
+#define ERR_INETADDRESS_WITHOUT_TYPE             169
+#define ERR_INETADDRESSTYPE_SUBTYPED             170
+#define ERR_INETADDRESS_SPECIFIC                 171
